# embedded-linux

./: .gitignore  README.md
notes/: gpio.org
projects/loop-test/: CMakeLists.txt  compile_commands.json  main.c  run.sh
projects/neon-testing/neon-test-a/: CMakeLists.txt  main.c
projects/neon-testing/neon-test-b/: CMakeLists.txt  main.c
projects/neon-testing/neon-test-c/: CMakeLists.txt  main.c
projects/p1/: cpuTemp.py  notes.org  p1-report.docx  plotLayout.py  run.sh  subProcess.py  table.csv  temp.py
projects/p1/.mypy_cache/3.7/: _ast.meta.json  _importlib_modulespec.meta.json  abc.meta.json  ast.meta.json  builtins.meta.json  codecs.meta.json  datetime.meta.json  io.meta.json  mmap.meta.json  posix.meta.json  sys.meta.json  time.meta.json  types.meta.json  typing.meta.json
projects/p1/.mypy_cache/3.7/collections/: __init__.meta.json  abc.meta.json
projects/p1/.mypy_cache/3.7/importlib/: __init__.meta.json  abc.meta.json  machinery.meta.json  util.meta.json
projects/p1/.mypy_cache/3.7/os/: __init__.meta.json  path.meta.json
projects/p3/: CMakeLists.txt  compile_commands.json  is_options.h  rmake.sh  yuv.c
projects/p3/docs/: notes.org
projects/p3/part-a/: CMakeLists.txt  gathering-stats.txt  info.txt  perf.data  perf.data.old
projects/p3/part-a/inc/: video_callback.h  yuv.h
projects/p3/part-a/perf-results/: perf.data  perf.data.opt  run.sh
projects/p3/part-a/perf-results/chroma-loop-opt/: Output.txt  dlc-output.txt  function-call-output.txt  perf.data.old  v1-output.txt  v2-chroma-output.txt  v2-no-chroma-output.txt
projects/p3/part-a/perf-results/gcc-opt/: perf.data
projects/p3/part-a/perf-results/temp-perf/: Output.txt  avg.txt
projects/p3/part-a/src/: CMakeCache.txt  CMakeLists.txt  Makefile  buffer_demo_base.c  cmake_install.cmake  istool1  main.c  video_callback.c
projects/p3/part-a/src/src/: Makefile  cmake_install.cmake
projects/p3/part-b/: CMakeLists.txt  README.md
projects/p3/part-b/inc/: video_callback.h
projects/p3/part-b/perf-results/: no-gcc-opt-vs-gcc-opt.txt  perf-result-notes.org  perf.data.noOpt
projects/p3/part-b/perf-results/chroma-loop-opt/: perf.data  temp-output.txt  v2-output.txt
projects/p3/part-b/perf-results/temp-perf/: perf.data
projects/p3/part-b/src/: CMakeLists.txt  buffer_demo_base.c  video_callback.c
projects/p3/perf-results/: perf-result-notes.org  perf.data.old
projects/p3/perf-results/chroma-loop-opt/: Output.txt  dla-output.txt  dlb-output.txt  perf.data.dla  perf.data.dlb  perf.data.dlc
projects/p3/perf-results/gcc-opt/: Output.txt
projects/p3/perf-results/no-gcc-opt/: Output.txt  get-pixel-annotated-noOpt.txt  perf.no.opt
projects/p3/src/: CMakeLists.txt  video_callback.c  yuv.c  yuv.h
