cmake_minimum_required(VERSION 2.8)
project(asm)
set(TARGET asm)
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
set(COMPILE_DEFINITIONS)
set(CMAKE_VERBOSE_MAKEFILE ON)
add_executable(${TARGET} main.c)
target_compile_options(${TARGET} PRIVATE "-O3" "-Ofast" "-g" "-mcpu=cortex-a72" "-mfpu=crypto-neon-fp-armv8" "-mfloat-abi=hard" "-ftree-vectorize")
target_link_libraries(${TARGET} )
# target_compile_options(${TARGET} PRIVATE "-o3" "-g")
